syntax = "proto3";

package home.app.grpc;

import "user_message.proto";
import "login_message.proto";
import "household_service.proto";

option java_multiple_files = true;

message LoginRequest {
  LoginMessage login = 1;
}

message LoginResponse {
  string token = 1;
}

message RegistrationRequest {
  UserMessage registration = 1;
}

message RegistrationResponse {
  int64 user_id = 1;
}

message UserResponse {
  UserMessage user = 1;
}

message ToggleBlockRequest {
  int64 user_id = 1;
}

message GetUsersRequest {
}

service AuthService {
  rpc Register(RegistrationRequest) returns (RegistrationResponse) {};
  rpc Login(LoginRequest) returns (LoginResponse) {};

  rpc GetUsers(GetUsersRequest) returns (stream UserResponse) {};
  rpc ToggleBlockOnUser(ToggleBlockRequest) returns (SuccessResponse) {};
}
